--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,11 @@
 
     <!-- 依赖管理 -->
     <dependencies>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.14.1</version>
+        </dependency>
     </dependencies>
 
 </project>
