--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <name>GServerECS</name>
     <description>ECS framework developed using Java language</description>
-    <url>https://github.com/ZKGameDev/GServerECS</url>
+    <url>https://github.com/top-kgame/GServerECS</url>
 
     <!-- 许可证信息（必须提供） -->
     <licenses>
@@ -25,11 +25,11 @@
     <!-- SCM信息（便于开发跟踪） -->
     <scm>
         <!-- 只读访问URL -->
-        <connection>scm:git:https://github.com/ZKGameDev/GServerECS.git</connection>
+        <connection>scm:git:https://github.com/top-kgame/GServerECS.git</connection>
         <!-- 开发者提交访问URL（需SSH权限） -->
-        <developerConnection>scm:git:git@github.com:ZKGameDev/GServerECS.git</developerConnection>
+        <developerConnection>scm:git:git@github.com:top-kgame/GServerECS.git</developerConnection>
         <!-- 浏览器访问地址 -->
-        <url>https://github.com/ZKGameDev/GServerECS</url>
+        <url>https://github.com/top-kgame/GServerECS</url>
     </scm>
 
     <!-- Java 21 专属配置 -->
@@ -115,7 +115,7 @@
     <distributionManagement>
       <repository>
         <id>github</id>
-        <url>https://maven.pkg.github.com/ZKGameDev/GServerECS</url>
+        <url>https://maven.pkg.github.com/top-kgame/GServerECS</url>
       </repository>
     </distributionManagement>
 
